<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="about_brazilian_portuguese">Brazilian Portuguese</string>
    <string name="about_chinese_simplified">Chinese (Simplified)</string>
    <string name="about_contributors_section">Contributors</string>
    <string name="about_croatian">Croatian</string>
    <string name="about_developer_section">Developer</string>
    <string name="about_french">French</string>
    <string name="about_german">German</string>
    <string name="about_italian">Italian</string>
    <string name="about_korean">Korean</string>
    <string name="about_libraries_section">Libraries</string>
    <string name="about_original_section">Original creator</string>
    <string name="about_polish">Polish</string>
    <string name="about_source_title">Writeily is Open Source on GitHub</string>
    <string name="about_spanish">Spanish</string>
    <string name="about_translators_section">Translators</string>
    <string name="about_version_title">Version</string>
    <string name="action_settings">Settings</string>
    <string name="app_settings">App Settings</string>
    <string name="archive">Archives</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="confirm_overwrite">File already exists, overwrite?</string>
    <string name="create">Create</string>
    <string name="create_folder">Create Folder</string>
    <string name="current_folder">Current folder:</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="editor_settings">Editor Settings</string>
    <string name="email_header">Feedback about Writeily</string>
    <string name="empty_archives_hint">"When you archive a note, 
this is where it will show up"</string>
    <string name="empty_directory">This directory is empty</string>
    <string name="empty_notes_list_hint">"When you create a new note,
this is where it will show up"</string>
    <string name="empty_starred_hint">"When you star a note,
this is where it will show up"</string>
    <string name="files">Files</string>
    <string name="folder_name_hint">Enter the name of your folder</string>
    <string name="folders">Folders</string>
    <string name="font_size_large">Large</string>
    <string name="font_size_normal">Normal</string>
    <string name="font_size_small">Small</string>
    <string name="import_from_device">Import from device</string>
    <string name="incorrect_pin_text">Incorrect pin</string>
    <string name="last_modified">Last modified: %s</string>
    <string name="meta">Meta</string>
    <string name="more_items_selected">%d items selected</string>
    <string name="move">Move</string>
    <string name="move_here">Move here</string>
    <string name="navigate_up_folder">Back to previous folder</string>
    <string name="new_name_hint">Enter new name</string>
    <string name="new_note">New note</string>
    <string name="no_selected_file">No file selected</string>
    <string name="notes">Notes</string>
    <string name="number_of_files">Number of files: %d</string>
    <string name="one_item_selected">One item selected</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="passphrase_title">Enter your passphrase</string>
    <string name="pin_go">Go</string>
    <string name="pin_title">Enter your pin</string>
    <string name="pref_about_dialog_title">About Writeily</string>
    <string name="pref_alpha_pin_lock">Alphanumeric Lock</string>
    <string name="pref_attribution_dialog_title">Attributions</string>
    <string name="pref_donate_writeily">Donate</string>
    <string name="pref_email">Email Support</string>
    <string name="pref_font_choice">Note Editor Font</string>
    <string name="pref_font_size">Font Size</string>
    <string name="pref_highlighting_activated">Markdown syntax highlighting</string>
    <string name="pref_highlighting_delay">Delay in milliseconds for highlighting refresh</string>
    <string name="pref_highlighting_delay_summary">Higher values are easier on the battery</string>
    <string name="pref_lock_settings">Lock</string>
    <string name="pref_no_lock">No Lock</string>
    <string name="pref_pin_lock">Pin Lock</string>
    <string name="pref_preview_first">Preview first when opening notes</string>
    <string name="pref_rate_writeily">Rate Writeily on Google Play</string>
    <string name="pref_remember_directory">Remember last folder location on startup</string>
    <string name="pref_root_directory_title">Select storage folder</string>
    <string name="pref_show_markdown_shortcuts">Show Markdown shortcuts bar</string>
    <string name="pref_smart_shortcuts">Smart brackets shortcuts</string>
    <string name="pref_smart_shortcuts_summary">If text is selected, {}, [] and () will surround the selection</string>
    <string name="pref_theme">Theme</string>
    <string name="pref_twitter">Follow Writeily on Twitter</string>
    <string name="preview">Preview</string>
    <string name="rename">Rename</string>
    <string name="rename_error_target_already_exists">Target file/folder already exists!</string>
    <string name="rename_fail">Failed to rename</string>
    <string name="rename_success">Successfully renamed</string>
    <string name="restore">Restore</string>
    <string name="search">Search</string>
    <string name="search_hint">Search notes</string>
    <string name="select">Select</string>
    <string name="select_elements">Select entries</string>
    <string name="select_folder_move">Select folder</string>
    <string name="select_root_folder">Select folder</string>
    <string name="select_this_folder">Select this folder</string>
    <string name="share">Share</string>
    <string name="share_as">Share as…</string>
    <string name="share_image">Image</string>
    <string name="share_string">Share to…</string>
    <string name="share_text">Plain Text</string>
    <string name="social">Social</string>
    <string name="star">Star</string>
    <string name="starred">Starred</string>
    <string name="tap_github">Tap to visit profile on GitHub</string>
    <string name="tap_website">Tap to visit website</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_light">Light</string>
    <string name="title">Title</string>
    <string name="translators_title">Translators</string>
    <string name="unstar">Unstar</string>
    <string name="untitled">Untitled</string>
    <string name="wr_import">Import</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="app_name">Writeily Pro</string>
    <string name="app_version">1.3.2</string>
    <string name="contributor_davydsantos">davydsantos</string>
    <string name="contributor_davydsantos_url">https://github.com/davydsantos</string>
    <string name="contributor_minty123">Minty123</string>
    <string name="contributor_minty123_url">https://github.com/Minty123</string>
    <string name="contributor_patcon">patcon</string>
    <string name="contributor_patcon_url">https://github.com/patcon</string>
    <string name="contributor_tommyalex">iptux (Tommy Alex)</string>
    <string name="contributor_tommyalex_url">https://github.com/iptux</string>
    <string name="library_anddown">CommonsWare AndDown 0.2.0</string>
    <string name="licence_apache20">Apache License v2.0</string>
    <string name="main_developer">Pedro Lafuente</string>
    <string name="main_developer_url">https://github.com/plafue</string>
    <string name="original_creator">Jeff Martin</string>
    <string name="original_creator_url">http://jeffreymartin.ca</string>
    <string name="pref_about_key">pref_about</string>
    <string name="pref_donate_writeily_key">pref_donate_writeily</string>
    <string name="pref_email_key">pref_email_key</string>
    <string name="pref_font_choice_key">pref_font_choice</string>
    <string name="pref_font_size_key">pref_font_size_key</string>
    <string name="pref_highlighting_activated_key">pref_highlighting_activated_key</string>
    <string name="pref_highlighting_delay_key">pref_highlighting_delay_key</string>
    <string name="pref_lock_type_key">pref_lock_type_key</string>
    <string name="pref_preview_first_key">pref_edit_first_key</string>
    <string name="pref_rate_writeily_key">pref_rate_writeily</string>
    <string name="pref_remember_directory_key">pref_remember_directory_key</string>
    <string name="pref_root_directory">pref_root_directory</string>
    <string name="pref_show_markdown_shortcuts_key">pref_show_markdown_shortcuts_key</string>
    <string name="pref_smart_shortcuts_key">pref_smart_shortcuts_key</string>
    <string name="pref_theme_key">pref_theme</string>
    <string name="pref_twitter_key">pref_twitter_key</string>
    <string name="source_url">https://github.com/plafue/writeily-pro</string>
    <string name="translators_chinese_simplified">Tommy Alex</string>
    <string name="translators_croatian">d-ban</string>
    <string name="translators_french">Tristan Stanic</string>
    <string name="translators_german">Minty123</string>
    <string name="translators_italian">Claudio Arseni</string>
    <string name="translators_korean">Halcyonera</string>
    <string name="translators_polish">Krizoman</string>
    <string name="translators_spanish">Carlos Mares</string>
    <string name="twitter_url">https://twitter.com/writeily</string>
    <string name="writeily_donate_url">https://play.google.com/store/apps/details?id=me.writeily.donate</string>
    <string name="writeily_email">mailto:writeily.app@gmail.com</string>
    <string name="writeily_url">https://play.google.com/store/apps/details?id=me.writeily</string>
</resources>